<resources>
    <string name="app_name">OpenSeizureDetector</string>
    <string name="AdvancedModeTitle">Advanced Mode</string>
    <string name="AdvancedModeSummary">Enable Advanced Settings (exposes a lot more things you can change....)</string>
    <string name="AutoStartTitle">Auto Start</string>
    <string name="AutoStartSummary">Auto start OpenSeizureDetector when phone is started</string>
    <string name="DataSourceTitle">Select Data Source</string>
    <string name="DataSourceSummary">Select whether to use a Garmin Watch, Pebble Watch or network connection as the seizure detector data source.</string>
    <string name="SeizureDetectorSettingsTitle">Seizure Detector Settings</string>
    <string name="AlarmThreshTitle">Alarm Threshold</string>
    <string name="AlarmThreshSummary">Alarm Threshold (Default = 100)</string>
    <string name="AlarmRatioThreshTitle">Alarm Ratio Threshold</string>
    <string name="AlarmRatioThreshSummary">Alarm Ratio Threshold (Default = 57). Increase to reduce sensitivity.</string>
    <string name="AlarmFreqMaxTitle">AlarmFreqMax (Hz)</string>
    <string name="AlarmFreqMaxSummary">Maximum Frequency of ROI (Hz) (Default = 8 Hz)</string>
    <string name="AlarmFreqMinTitle">AlarmFreqMin (Hz)</string>
    <string name="AlarmFreqMinSummary">Minimum Frequency of ROI (Hz) (Default = 3 Hz)</string>
    <string name="HRAlarmEnabledTitle">Heart Rate Alarms</string>
    <string name="HRAlarmEnabledSummary" />
    <string name="HRNullAlarmTitle">Treat a Null heart rate as an alarm condition</string>
    <string name="HRNullAlarmSummary" />
    <string name="HRThreshMinTitle">Heart Rate Min Threshold (bpm)</string>
    <string name="HRThreshMinSummary" />
    <string name="HRThreshMaxTitle">Heart Rate Max Threshold (bpm)</string>
    <string name="HRThreshMaxSummary" />
    <string name="seizure_detector_settings_title">Seizure Detector</string>
    <string name="log_alarms_summary">Log Alarm events to Phone Storage</string>
    <string name="log_alarms_title">Log Alarm Events</string>
    <string name="log_data_summary">Log Data to Phone Storage</string>
    <string name="log_data_title">Log Data</string>
    <string name="auto_start_summary">Auto Start App on Boot</string>
    <string name="auto_start_title">Auto Start App on Boot</string>
    <string name="app_version_summary">App Version Number - used to decide whether to display the welcome message or not.</string>
    <string name="app_version_title">App Version Number</string>
    <string name="latch_alarms_summary">Require manual reset of alarms to reset them to silence them.</string>
    <string name="latch_alarms_title">Latch Alarms</string>
    <string name="latch_timer_period_title">Latch Alarm Timer Duration (sec)</string>
    <string name="latch_timer_period_summary">Duration in seconds that alarms will initiate for before being silenced automatically.</string>
    <string name="enable_audible_alarm_summary">Issue an audible alarm if the seizure detector enters an alarm condition.</string>
    <string name="enable_audible_alarm_title">Enable Audible Alarm</string>
    <string name="enable_audible_warning_summary">Issue an audible alarm if the seizure detector enters a warning (pre-alarm) condition.</string>
    <string name="enable_audible_warning_title">Enable Audible Warnings</string>
    <string name="enable_audible_fault_summary">Issue an audible alarm if the system detects a fault (e.g. can not talk to watch).</string>
    <string name="enable_audible_fault_title">Enable Audible System FaultWarnings</string>
    <string name="fault_timer_period_title">Fault Timer Duration (sec)</string>
    <string name="fault_timer_period_summary">Duration that fault alarms are muted before initiating.</string>
    <string name="enable_data_frequency_check_title">Enable Data Sample Frequency Checks</string>
    <string name="enable_data_frequency_check_summary">Check that data arrives at the expected frequency (5±1s seconds) and raise a fault if not.</string>
    <string name="phone_battery_alarm_category_title">Phone Battery Alarm</string>
    <string name="phone_battery_alarm_active_title">Enable Low Battery Fault</string>
    <string name="phone_battery_alarm_active_summary">Raise a FAULT condition when the phone battery is critically low, to alert the carer before monitoring fails silently</string>
    <string name="phone_battery_alarm_threshold_title">Battery Threshold (%)</string>
    <string name="phone_battery_alarm_threshold_summary">Raise a FAULT when phone battery falls to or below this percentage (default: 5%)</string>
    <string name="use_mp3_alarm_summary">Play an MP3 file to create the alarm beeps rather than using the default tone generator.</string>
    <string name="use_mp3_alarm_title">Use MP3 Alarm Sound</string>
    <string name="mp3_warning_sound_title">Warning Sound File</string>
    <string name="mp3_warning_sound_summary_default">Using bundled warning sound</string>
    <string name="mp3_alarm_sound_title">Alarm Sound File</string>
    <string name="mp3_alarm_sound_summary_default">Using bundled alarm sound</string>
    <string name="mp3_fault_sound_title">Fault Sound File</string>
    <string name="mp3_fault_sound_summary_default">Using bundled fault sound</string>
    <string name="enable_sms_alarm_summary">Issue a SMS (Text Message) alarm if the seizure detector enters an alarm condition. NOTE: THE MESSAGE WILL INCLUDE THE USER\'s LOCATION. Disable this option if sharing your location is a concern.</string>
    <string name="enable_sms_alarm_title">Enable SMS Alarm</string>
    <string name="sms_numbers_summary">Telephone number(s) to notify by SMS of Alarm (comma separated).</string>
    <string name="sms_numbers_title">SMS Alarm numbers</string>
    <string name="sms_message_summary">Message to be Sent by SMS when a Seizure is Detected.</string>
    <string name="sms_message_title">SMS Message</string>
    <string name="ble_device_settings_title">BLE Device Settings</string>
    <string name="ble_mac_addr_summary">MAC Address of BLE Data Source Device</string>
    <string name="ble_mac_addr_title">Device Address</string>
    <string name="ble_device_name_summary">Name of BLE Data Source Device</string>
    <string name="ble_device_name_title">Device Name</string>
    <string name="user_interface_settings_title">User Interface Settings</string>
    <string name="pebble_update_period_summary">Time period at which data is sent to the phone (does not affect analysis frequency - see Sample Period setting for that)</string>
    <string name="mute_period_summary">Time that alarms are muted following a long press of the UP button</string>
    <string name="pebble_update_period_title">Data Transfer Period (sec)</string>
    <string name="mute_period_title">Mute Period (sec)</string>
    <string name="manual_alarm_period_summary">Time that manual alarms sound following a long press of the DOWN button</string>
    <string name="manual_alarm_period_title">Manual Alarm Period (sec)</string>
    <string name="warn_time_summary">Time to wait before initiating warning (Default = 5 sec)</string>
    <string name="warn_time_title">WarnTime (sec)</string>
    <string name="alarm_time_summary">Time to wait before initiating alarm (Default = 10 sec)</string>
    <string name="alarm_time_title">AlarmTime (sec)</string>
    <string name="alarm_threshold_summary">Alarm Threshold (Default = 100)</string>
    <string name="alarm_threshold_title">AlarmThresh</string>
    <string name="alarm_ratio_thresh_summary">Alarm Ratio Threshold (Default = 50). Increase this value to reduce sensitivity if false alarms are a problem.</string>
    <string name="alarm_ratio_thresh_title">AlarmRatioThresh</string>
    <string name="alarm_freq_min_summary">Minimum Frequency of ROI (Hz) (Default = 3 Hz)</string>
    <string name="alarm_freq_min_title">AlarmFreqMin (Hz)</string>
    <string name="alarm_freq_max_summary">Maximum Frequency of ROI (Hz) (Default = 10 Hz)</string>
    <string name="alarm_freq_max_title">AlarmFreqMax (Hz)</string>
    <string name="sample_period_summary">Period (in seconds) between data analyses</string>
    <string name="sample_period_title">SamplePeriod (sec)</string>
    <string name="seizure_detect_mode_summary">Select one of the three available modes of operation.</string>
    <string name="seizure_detect_mode_title">Seizure Detector Mode</string>
    <string name="sample_freq_summary">Higher Frequency is more Accurate, but uses more battery power.</string>
    <string name="sample_freq_title">Select Sample Frequency</string>
    <string name="fall_detect_title">Fall Detector Settings</string>
    <string name="fall_detect_active_title">Fall Detection Function</string>
    <string name="fall_detect_active_summary">Fall Detection Function</string>
    <string name="fall_thresh_min_title">Fall Detection Lower Threshold (milli-g)</string>
    <string name="fall_thresh_max_title">Fall Detection Upper Threshold (milli-g)</string>
    <string name="fall_window_title">Fall Detection Window (milli-seconds)</string>
    <string name="watch_comms_title">Watch Communications Settings</string>
    <string name="debug_mode_summary">Set Debug mode on or off.</string>
    <string name="debug_mode_title">Seizure Detector Debug Mode</string>
    <string name="app_restart_timeout_summary">Period (seconds) that we wait for data from the watch before assuming the watch app is not running and re-starting it.</string>
    <string name="app_restart_timeout_title">Period (sec) we wait for data before restarting watch app.</string>
    <string name="DataLoggingSettingsTitle">Data Logging Settings</string>
    <string name="HeartRateAlarmSettingsTitle">Simple Heart Rate Alarm Settings</string>
    <string name="AlarmFunctionalitySettingsTitle">Alarm Functionality Settings</string>
    <string name="AudibleAlarmSettingsTitle">Audible Alarm Settings</string>
    <string name="SMSAlarmSettingsTitle">SMS Alarm Settings</string>
    <string name="DefaultSMSMsgText">**SEIZURE DETECTED**</string>
    <string name="prevent_bat_opt_summary">Do not display the battery optimisation dialog on start-up (some phones report that OpenSeizureDetector is optimised, even if it is not, so the dialog is a nuissance)</string>
    <string name="prevent_bat_opt_title">Inhibit Battery Optimisation Warning Dialog</string>
    <string name="display_main_activity_on_alarm_title">Display Main Activity on Alarm</string>
    <string name="display_main_activity_on_alarm_summary">Bring the Main Activity to the foreground when an alarm occurs (if enabled).</string>
    <string name="sms_delay_sec">SMS Delay (sec)</string>
    <string name="sms_delay_sec_desc">The number of seconds to delay between an alarm initiating and an SMS message being sent (default=10)</string>
    <string name="DefaultSMSFalseAlarmMsgText">False Alarm, Sorry!</string>
    <string name="sms_false_alarm_message_summary">Text of \'False Alarm\' SMS message</string>
    <string name="sms_false_alarm_message_title">SMS False Alarm Message</string>
    <string name="developer_mode_summary">Show additional options for developers</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="app_theme">App Theme</string>
    <string name="app_theme_summary">Choose between light, dark, or system default theme</string>
    <string name="disable_welcome_screens">Disable Welcome Screens</string>
    <string name="prevent_the_welcome_setup_screens_displaying_when_the_app_starts_they_are_not_needed_after_initial_set_up">Prevent the welcome/setup screens displaying when the app starts (they are not needed after initial set-up).</string>
    <string name="system">system</string>
    <string name="select_theme">Select Theme</string>
    <string name="advanced_mode_summary">Enable Advanced Mode to view additional settings and tabs</string>
    <string name="advanced_mode">Advanced Mode</string>
</resources>