<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="LatchAlarms"
        android:title="@string/latch_alarms_title"
        android:summary="@string/latch_alarms_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="AudibleAlarm"
        android:title="@string/enable_audible_alarm_title"
        android:summary="@string/enable_audible_alarm_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="AudibleWarning"
        android:title="@string/enable_audible_warning_title"
        android:summary="@string/enable_audible_warning_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="SMSAlarm"
        android:title="@string/enable_sms_alarm_title"
        android:summary="@string/enable_sms_alarm_summary"
        android:defaultValue="false" />
    <EditTextPreference
        android:key="SMSNumbers"
        android:title="@string/sms_numbers_title"
        android:summary="@string/sms_numbers_summary"
        android:defaultValue="" />
    <EditTextPreference
        android:key="SMSMsg"
        android:title="@string/sms_message_title"
        android:summary="@string/sms_message_summary"
        android:defaultValue="**SEIZURE DETECTED**" />

    <CheckBoxPreference
        android:key="AudibleFaultWarning"
        android:title="@string/enable_audible_fault_title"
        android:summary="@string/enable_audible_fault_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="LogAlarms"
        android:title="@string/log_alarms_title"
        android:summary="@string/log_alarms_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="LogData"
        android:title="@string/log_data_title"
        android:summary="@string/log_data_summary"
        android:defaultValue="false" />
<!--    <CheckBoxPreference
        android:key="PreventSleep"
        android:title="Prevent the screen from blanking."
        android:summary="Prevent the screen from blanking while the application is running."
        android:defaultValue="false" />
    <EditTextPreference
        android:key="UpdatePeriod"
        android:title="Display Update Period (ms)."
        android:summary="Display update period in miliseconds."
        android:defaultValue="1000" />
-->
    <EditTextPreference
        android:key="AlarmFreqMin"
        android:title="@string/alarm_freq_min_title"
        android:summary="@string/alarm_freq_min_summary"
        android:defaultValue="5" />
    <EditTextPreference
        android:key="AlarmFreqMax"
        android:title="@string/alarm_freq_max_title"
        android:summary="@string/alarm_freq_max_summary"
        android:defaultValue="10" />
    <EditTextPreference
        android:key="WarnTime"
        android:title="@string/warn_time_title"
        android:summary="@string/warn_time_summary"
        android:defaultValue="5" />
    <EditTextPreference
        android:key="AlarmTime"
        android:title="@string/alarm_time_title"
        android:summary="@string/alarm_time_summary"
        android:defaultValue="10" />
    <EditTextPreference
        android:key="AlarmThresh"
        android:title="@string/alarm_threshold_title"
        android:summary="@string/alarm_threshold_summary"
        android:defaultValue="100" />
    <EditTextPreference
        android:key="AlarmRatioThresh"
        android:title="@string/alarm_ratio_thresh_title"
        android:summary="@string/alarm_ratio_thresh_summary"
        android:defaultValue="30" />

    <CheckBoxPreference
        android:key="FallActive"
        android:title="@string/fall_detect_active_title"
        android:summary=""
        android:defaultValue="false" />
    <EditTextPreference
        android:key="FallThreshMin"
        android:title="@string/fall_thresh_min_title"
        android:summary=""
        android:defaultValue="200" />
    <EditTextPreference
        android:key="FallThreshMax"
        android:title="@string/fall_thresh_max_title"
        android:summary=""
        android:defaultValue="1200" />
    <EditTextPreference
        android:key="FallWindow"
        android:title="@string/fall_window_title"
        android:summary=""
        android:defaultValue="1500" />



    <EditTextPreference
        android:key="AppRestartTimeout"
        android:title="@string/app_restart_timeout_title"
        android:summary="@string/app_restart_timeout_summary"
        android:numeric="integer"
        android:defaultValue="10" />
    <EditTextPreference
        android:key="FaultTimerPeriod"
        android:title="@string/fault_timer_period_title"
        android:summary="@string/fault_timer_period_summary"
        android:numeric="integer"
        android:defaultValue="30" />

</PreferenceScreen>
