<?xml version="1.0" encoding="utf-8"?><!-- The ListPreference data is defined in pebble_datasource_values.xml -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/ble_device_settings_title">
        <EditTextPreference
            android:defaultValue=""
            android:key="BLE_Device_Addr"
            android:summary="@string/ble_mac_addr_summary"
            android:title="@string/ble_mac_addr_title" />
        <EditTextPreference
            android:defaultValue=""
            android:key="BLE_Device_Name"
            android:summary="@string/ble_device_name_summary"
            android:title="@string/ble_device_name_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/user_interface_settings_title">
        <EditTextPreference
            android:defaultValue="5"
            android:key="PebbleUpdatePeriod"
            android:summary="@string/pebble_update_period_summary"
            android:title="@string/pebble_update_period_title" />
        <EditTextPreference
            android:defaultValue="300"
            android:key="MutePeriod"
            android:summary="@string/mute_period_summary"
            android:title="@string/mute_period_title" />
        <EditTextPreference
            android:defaultValue="30"
            android:key="ManAlarmPeriod"
            android:summary="@string/manual_alarm_period_summary"
            android:title="@string/manual_alarm_period_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/seizure_detector_settings_title">
        <EditTextPreference
            android:defaultValue="5"
            android:key="WarnTime"
            android:summary="@string/warn_time_summary"
            android:title="@string/warn_time_title" />
        <EditTextPreference
            android:defaultValue="10"
            android:key="AlarmTime"
            android:summary="@string/alarm_time_summary"
            android:title="@string/alarm_time_title" />
        <EditTextPreference
            android:defaultValue="100"
            android:key="AlarmThresh"
            android:summary="@string/alarm_threshold_summary"
            android:title="@string/alarm_threshold_title" />
        <EditTextPreference
            android:defaultValue="50"
            android:key="AlarmRatioThresh"
            android:summary="@string/alarm_ratio_thresh_summary"
            android:title="@string/alarm_ratio_thresh_title" />

        <EditTextPreference
            android:defaultValue="3"
            android:key="AlarmFreqMin"
            android:summary="@string/alarm_feq_min_summary"
            android:title="@string/alarm_freq_min_title" />
        <EditTextPreference
            android:defaultValue="10"
            android:key="AlarmFreqMax"
            android:summary="@string/alarm_freq_max_summary"
            android:title="@string/alarm_frequency_max_title" />

        <EditTextPreference
            android:defaultValue="5"
            android:key="SamplePeriod"
            android:summary="@string/sample_period_summary"
            android:title="@string/sample_period_title" />
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="Select Seizure Detector Mode"
            android:entries="@array/pebble_sd_mode_list"
            android:entryValues="@array/pebble_sd_mode_list_values"
            android:key="PebbleSdMode"
            android:summary="@string/seizure_detect_mode_summary"
            android:title="@string/seizure_detect_mode_title" />
        <ListPreference
            android:defaultValue="100"
            android:dialogTitle="Select Sample Frequency"
            android:enabled="true"
            android:entries="@array/pebble_sample_freq_list"
            android:entryValues="@array/pebble_sample_freq_list_values"
            android:key="SampleFreq"
            android:summary="@string/sample_freq_summary"
            android:title="@string/sample_freq_title" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/fall_detect_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="FallActive"
            android:summary=""
            android:title="@string/fall_detect_active_title" />
        <EditTextPreference
            android:defaultValue="200"
            android:key="FallThreshMin"
            android:summary=""
            android:title="@string/fall_thresh_min_title" />
        <EditTextPreference
            android:defaultValue="1200"
            android:key="FallThreshMax"
            android:summary=""
            android:title="@string/fall_thresh_max_title" />
        <EditTextPreference
            android:defaultValue="1500"
            android:key="FallWindow"
            android:summary=""
            android:title="@string/fall_window_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/watch_comms_title">
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="Select Debug Mode"
            android:entries="@array/pebble_debug_list"
            android:entryValues="@array/pebble_debug_values"
            android:key="PebbleDebug"
            android:summary="@string/debug_mode_summary"
            android:title="@string/debug_mode_title" />
        <EditTextPreference
            android:defaultValue="10"
            android:key="AppRestartTimeout"
            android:numeric="integer"
            android:summary="@string/app_restart_timeout_summary"
            android:title="@string/app_restart_timeout_title" />
    </PreferenceCategory>
</PreferenceScreen>
