<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:enabled="true"
        android:key="advancedMode"
        android:summary="@string/AdvancedModeSummary"
        android:title="@string/AdvancedModeTitle" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:enabled="true"
        android:key="AutoStart"
        android:summary="@string/AutoStartSummary"
        android:title="@string/AutoStartTitle" />

    <ListPreference
        android:defaultValue="Garmin"
        android:dialogTitle="Select Data Source"
        android:entries="@array/datasource_list"
        android:entryValues="@array/datasource_list_values"
        android:key="DataSource"
        android:summary="@string/DataSourceSummary"
        android:title="@string/DataSourceTitle" />

    <PreferenceCategory android:title="@string/DataLoggingSettingsTitle">
<!--    <CheckBoxPreference
        android:defaultValue="false"
        android:key="LogDataRemote"
        android:summary="@string/LogRemoteSummary"
        android:title="@string/LogRemoteTitle" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="LogDataRemoteMobile"
        android:summary="@string/UseMobileSummary"
        android:title="@string/UseMobileTitle" />
-->
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/SeizureDetectorSettingsTitle">

    <EditTextPreference
        android:defaultValue="100"
        android:key="AlarmThresh"
        android:summary="@string/AlarmThreshSummary"
        android:title="@string/AlarmThreshTitle" />
    <EditTextPreference
        android:defaultValue="50"
        android:key="AlarmRatioThresh"
        android:summary="@string/AlarmRatioThreshSummary"
        android:title="@string/AlarmRatioThreshTitle" />

    <EditTextPreference
        android:defaultValue="3"
        android:key="AlarmFreqMin"
        android:summary="@string/AlarmFreqMinSummary"
        android:title="@string/AlarmFreqMinTitle" />
    <EditTextPreference
        android:defaultValue="8"
        android:key="AlarmFreqMax"
        android:summary="@string/AlarmFreqMaxSummary"
        android:title="@string/AlarmFreqMaxTitle" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/HeartRateAlarmSettingsTitle">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="HRAlarmActive"
            android:summary="@string/HRAlarmEnabledSummary"
            android:title="@string/HRAlarmEnabledTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="HRNullAsAlarm"
            android:summary="@string/HRNullAlarmSummary"
            android:title="@string/HRNullAlarmTitle" />
        <EditTextPreference
            android:defaultValue="40"
            android:key="HRThreshMin"
            android:summary="@string/HRThreshMinSummary"
            android:title="@string/HRThreshMinTitle" />
        <EditTextPreference
            android:defaultValue="150"
            android:key="HRThreshMax"
            android:summary="@string/HRThreshMaxSummary"
            android:title="@string/HRThreshMaxTitle" />
    </PreferenceCategory>


</PreferenceScreen>
