<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:key="darkMode"
        android:title="@string/app_theme"
        android:summary="@string/app_theme_summary"
        android:entries="@array/dark_mode_entries"
        android:entryValues="@array/dark_mode_values"
        android:defaultValue="@string/system"
        android:dialogTitle="@string/select_theme" />
        />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="AutoStart"
        android:summary="@string/auto_start_summary"
        android:title="@string/auto_start_title"
        android:enabled="true"
        />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="PreventBatteryOptWarning"
        android:summary="@string/prevent_bat_opt_summary"
        android:title="@string/prevent_bat_opt_title"
        android:enabled="true"
        />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="first_run_complete"
        android:summary="@string/prevent_the_welcome_setup_screens_displaying_when_the_app_starts_they_are_not_needed_after_initial_set_up"
        android:title="@string/disable_welcome_screens"
        android:enabled="true"
        />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_advanced_mode"
        android:summary="@string/advanced_mode_summary"
        android:title="@string/advanced_mode" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_developer_mode"
        android:summary="@string/developer_mode_summary"
        android:title="@string/developer_mode" />

    <EditTextPreference
        android:defaultValue=""
        android:key="AppVersionName"
        android:summary="@string/app_version_summary"
        android:title="@string/app_version_title" />


</PreferenceScreen>
